# gameoflife

./: Cargo.toml  README.md  justfile
.github/workflows/: linux.yml  macos.yml
src/: game.rs  gamecell.rs  grid.rs  lib.rs  main.rs
