[package]
name = "gameoflife"
version = "1.1.2"
edition = "2021"
authors = ["Maxwell Anderson <zaechus@proton.me>"]
license = "MIT"
description = "Conway's Game of Life running in a terminal"
repository = "https://github.com/Zaechus/gameoflife"

[dependencies]
crossterm = "0.26"
ctrlc = "3.2"
rand = "0.8"
rayon = "1.6"
