[package]
name = "gameoflife"
version = "1.2.0"
authors = ["Maxwell Anderson <zaechus@pm.me>"]
description = "Conway's Game of Life for the terminal"
repository = "https://github.com/Zaechus/gameoflife"
license = "MIT"
categories = ["games"]
edition = "2021"

[dependencies]
crossterm = "0.27"
ctrlc = "3.4"
rand = "0.8"
rayon = "1.10"

[profile.release]
panic = "abort"
strip = true
